GNOME Bugzilla – Bug 702177
Taking a picture for a contact avatar causes the top bar to dissappear
Last modified: 2013-07-11 16:40:30 UTC
Created attachment 246717 [details] Full desktop screenshot taken after setting a new photo for contact 'Freddy' To reproduce: 1) Select a contact -> 'Edit' 2) Click on avatar icon 3) Select camera option, take a photo 4) Set this new photo and click 'Close' on picture dialog 5) Observe that the GNOME top bar has disappeared Closing the contacts applications causes the top bar to reappear.
Created attachment 248872 [details] [review] proposed patch
pushed to master and 3.8 branch. thanks Erick for reviewing it.