src/cheese-flash.h
@@ -20,6 +20,7 @@
 #ifndef _CHEESE_FLASH_H_
 #define _CHEESE_FLASH_H_
 
+#include <gtk/gtk.h>
 #include <glib-object.h>
 
 G_BEGIN_DECLS
@@ -31,21 +32,37 @@ G_BEGIN_DECLS
 #define CHEESE_IS_FLASH_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), CHEESE_TYPE_FLASH))
 #define CHEESE_FLASH_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), CHEESE_TYPE_FLASH, CheeseFlashClass))
 
-typedef struct
-{
-  GObjectClass parent_class;
-} CheeseFlashClass;
+typedef struct _CheeseFlashPrivate CheeseFlashPrivate;
+typedef struct _CheeseFlashClass CheeseFlashClass;
+typedef struct _CheeseFlash CheeseFlash;
 
-typedef struct
+/**
+ * CheeseFlashClass:
+ *
+ * Use the accessor functions below.
+ */
+struct _CheeseFlashClass
 {
-  GObject parent_instance;
-} CheeseFlash;
+  /*< private >*/
+  GtkWindowClass parent_class;
+};
+
+/**
+ * CheeseFlash:
+ *
+ * Use the accessor functions below.
+ */
+struct _CheeseFlash
+{
+  /*< private >*/
+  GtkWindow parent_instance;
+  CheeseFlashPrivate *priv;
+};
 
 GType        cheese_flash_get_type (void) G_GNUC_CONST;
-CheeseFlash *cheese_flash_new (void);
+CheeseFlash *cheese_flash_new (GtkWidget *parent);
 
-void cheese_flash_fire (CheeseFlash *flash,
-                        GdkRectangle *rect);
+void cheese_flash_fire (CheeseFlash *flash);
 
 #include <cheese/cheese-widget.h>
 
